test media screen

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <!-----HEADER----->
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!----say browser that container width should be in line with screen size---->
     <title>Mini CRM project</title>
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
