finish mobile view

--- a/index.html
+++ b/index.html
@@ -169,23 +169,23 @@
                 <p>SimAccu is the practical combination of a simple accounting app and a smart CRM, 
                     finally bringing your financials and client relationships together in one secure 
                     place.</p>
-                <table border="1">
+                <table class="table_01" border="1">
                     <tr>
                         <th>Features</th>
                         <th>Benefit</th>
                     </tr>
                     <tr>
-                        <td>Accurate Accounting</td>
+                        <td class="mobile_header">Accurate Accounting</td>
                         <td>Effortlessly track income, expenses, and invoices. Get peace of mind 
                             knowing your books are clean.</td>
                     </tr>
                     <tr>
-                        <td>Comprehensive CRM</td>
+                        <td class="mobile_header">Comprehensive CRM</td>
                         <td>Manage all client interactions, leads, and sales pipelines in a single 
                             dashboard. Never miss a follow-up.</td>
                     </tr>
                     <tr>
-                        <td>Actionable Analytics</td>
+                        <td class="mobile_header">Actionable Analytics</td>
                         <td>Gain powerful insights from your business data to understand what's 
                             working and where to focus next.</td>
                     </tr>
@@ -198,7 +198,7 @@
         <!--find how to place text on the image, now be a table-->
         <section>
             <h2>What product provide to you</h2>
-            <table border="1">
+            <table class="table_02" border="1">
                 <tr>
                     <th>Accurate Accounting</th>
                     <th>Comprehensive Reporting</th>
