--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
                 padding: 10px 0;
                 position: sticky; /* fix header */
                 top: 0;
+                z-index: 1000;
             }
 
             nav {
